# namespaces-server

./: .env  Cargo.toml  README.md
migrations/2021-08-10-082407_init/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: comment.rs  mod.rs  namespace.rs  namespaces_users.rs  thread.rs  threads_users.rs  user.rs
src/routes/: user.rs
