[package]
name = "namespaces-server"
version = "0.1.0"
authors = ["Jake Kile <jkile9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
mongodb = "1.2.2"
serde = { version = "1.0.127", features = ["derive"] }