[package]
name = "namespaces-server"
version = "0.1.0"
authors = ["Jake Kile <jkile9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.127", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
r2d2 = "0.8"